# okvis

./: .gitignore  CMakeLists.txt
okvis_apps/src/: okvis_app_synchronous_viewer.cpp
okvis_viewer/: CMakeLists.txt
okvis_viewer/include/okvis/: MapDrawer.hpp  Viewer.hpp
okvis_viewer/src/: MapDrawer.cc  Viewer.cc
